--- a/client/package.json
+++ b/client/package.json
@@ -12,12 +12,14 @@
     "@types/react": "^16.14.25",
     "@types/react-dom": "^16.9.14",
     "@types/react-redux": "^7.1.24",
+    "axios": "^0.26.1",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-notifications-component": "^3.4.1",
     "react-redux": "^7.2.8",
     "react-scripts": "5.0.1",
-    "typescript": "^4.1.6"
+    "typescript": "^4.1.6",
+    "uuid": "^8.3.2"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -39,5 +41,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/uuid": "^8.3.4"
   }
 }
