--- a/package.json
+++ b/package.json
@@ -17,5 +17,8 @@
     "cors": "^2.8.5",
     "express": "^4.17.3",
     "pg": "^8.7.3"
+  },
+  "devDependencies": {
+    "@types/uuid": "^8.3.4"
   }
 }
